carina-cli/src/snapshots/carina_cli__plan_snapshot_tests__snapshot_deferred_for_with_unrelated_delete.snap
---
source: carina-cli/src/plan_snapshot_tests.rs
expression: output
---
Execution Plan:

  + aws.acm.Certificate cert
      domain_name: "registry.example.com"
      validation_method: "DNS"
        │
        ├─ + aws.route53.RecordSet validation_records[*] (N records after cert applies)
        │     from: for opt in cert.domain_validation_options
        │
        └─ - aws.route53.RecordSet extra_record
              hosted_zone_id: "Z123"
              name: "_extra.registry.example.com"
              resource_records: ["_old-extra.example.com"]
              ttl: 60
              type: "CNAME"

Plan: 1 to add, 0 to change, 1 to destroy.
       N to add after cert applies.
