carina-cli/src/snapshots/carina_cli__plan_snapshot_tests__snapshot_depends_on.snap
---
source: carina-cli/src/plan_snapshot_tests.rs
expression: output
---
Execution Plan:

  + aws.iam.Role role
      assume_role_policy_document: "{}"
      role_name: "my-role"
        │
        └─ + aws.s3.Bucket aws_s3_bucket_1e40c28e
              bucket_name: "my-bucket"

Plan: 2 to add, 0 to change, 0 to destroy.
