carina-cli/src/snapshots/carina_cli__plan_snapshot_tests__snapshot_deposed_delete.snap
---
source: carina-cli/src/plan_snapshot_tests.rs
assertion_line: 566
expression: output
---
Execution Plan:

  - awscc.ec2.Vpc main (deposed vpc-old)
      cidr_block: "10.220.0.0/16"
      vpc_id: "vpc-old"

Plan: 0 to add, 0 to change, 1 to destroy.
