carina-cli/src/snapshots/carina_cli__plan_snapshot_tests__snapshot_enum_display.snap
---
source: carina-cli/src/plan_snapshot_tests.rs
expression: output
---
Execution Plan:

  + awscc.ec2.Vpc awscc_ec2_vpc_0bc2a2bb
      cidr_block: "10.0.0.0/16"
      instance_tenancy: dedicated

Plan: 1 to add, 0 to change, 0 to destroy.
