carina-cli/src/snapshots/carina_cli__plan_snapshot_tests__snapshot_explicit.snap
---
source: carina-cli/src/plan_snapshot_tests.rs
expression: output
---
Execution Plan:

  ~ awscc.ec2.Vpc vpc
      tags:
        + Environment: "staging"
        │
        ├─ + awscc.ec2.SecurityGroup awscc_ec2_security_group_166e04b3
        │     group_description: "Test security group"
        │     tags:
        │       Name: "test-sg"
        │     vpc_id: "vpc-0123456789abcdef0"
        │
        └─ - awscc.ec2.Subnet my_subnet

Plan: 1 to add, 1 to change, 1 to destroy.
